添加和更新本地化字符串资源
在 Resources.Designer.cs 中添加了多个新的本地化字符串资源，包括 Aperture、BaudRate、CaptureImage 等。在多个 .resx 文件中添加了相应的本地化字符串值。在多个 XAML 文件中使用新的本地化资源替换了硬编码的字符串。更新了 HeartbeatTime 的值，添加了单位 (ms)。删除了重复的 StopExecution 和 CaptureImage 字符串。这些更改提高了代码的可维护性和可扩展性。

--- a/Engine/ColorVision.Engine/Services/Devices/Calibration/DisplayCalibrationControl.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Calibration/DisplayCalibrationControl.xaml
@@ -51,13 +51,13 @@
         <Border x:Name="DisPlayBorder" Style="{DynamicResource BorderModuleArea}"  Visibility="{Binding IsDisplayOpen,Converter={StaticResource bool2VisibilityConverter}}" >
             <StackPanel  Margin="5">
                 <TextBlock x:Name="TextBlockUnknow" Text="{x:Static properties:Resources.UnknownStatus}"  HorizontalAlignment="Center"/>
-                <TextBlock x:Name="TextBlockUnInit" Text="服务已经关闭"  HorizontalAlignment="Center"/>
-                <Button x:Name="ButtonUnauthorized" Margin="0,0,0,3" Content="未授权或者相机许可证过期" Command="{Binding EditCommand}"/>
+                <TextBlock x:Name="TextBlockUnInit" Text="{x:Static properties:Resources.SeviceClosed}"  HorizontalAlignment="Center"/>
+                <Button x:Name="ButtonUnauthorized" Margin="0,0,0,3" Content="{x:Static properties:Resources.UnauthorizedOrCameraLicenseExpiredz}" Command="{Binding EditCommand}"/>
                 <StackPanel x:Name="StackPanelContent">
                     <TabControl BorderThickness="0" Background="Transparent">
                         <TabItem x:Name="RadioLocal" Background="Transparent" Header="{x:Static properties:Resources.Local}" >
                             <StackPanel Orientation="Horizontal" Margin="0,2">
-                                <TextBlock Text="文件" Margin="10,0,0,0" Width="40"/>
+                                <TextBlock Text="{x:Static properties:Resources.File}" Margin="10,0,0,0" Width="40"/>
                                 <TextBox x:Name="ImageFile" Style="{StaticResource TextBox.Small}"  Width="150" Text="" Margin="0,0,2,0" HorizontalAlignment="Left" />
                                 <Button  Content="..." DockPanel.Dock="Right" HorizontalAlignment="Right"  Click="Open_File" />
                                 <Button DockPanel.Dock="Right" Content="{x:Static properties:Resources.Open}" Click="Button_OpenLocal_Click" />
