--- a/Engine/ColorVision.Engine/Services/Devices/Calibration/InfoCalibration.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Calibration/InfoCalibration.xaml
@@ -93,15 +93,16 @@
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.Code}"/>
                             </DockPanel>
                             <DockPanel>
-                                <TextBlock Text="发送信道" Width="120"/>
+                                <TextBlock Text="{x:Static properties:Resources.TransmitChannel}" Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.SendTopic}"/>
                             </DockPanel>
                             <DockPanel>
-                                <TextBlock Text="接收信道" Width="120"/>
+                                <TextBlock Text="{x:Static properties:Resources.ReceiveChannel}" Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.SubscribeTopic}"/>
                             </DockPanel>
                             <DockPanel>
-                                <TextBlock Text="心跳时间(ms)"  Width="120"/>
+                                <TextBlock Text="{x:Static properties:Resources.HeartbeatTime}"  Width="120"/>
+                                <TextBlock Text="(ms)"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.HeartbeatTime}"/>
                             </DockPanel>
                             <DockPanel>
@@ -110,33 +111,33 @@
                             </DockPanel>
                             <DockPanel>
                                 <Button DockPanel.Dock="Right" Content="管理" Command="{Binding OpenPhyCameraMangerCommand}"  />
-                                <TextBlock Text="绑定物理相机代码"  Width="120"/>
+                                <TextBlock Text="{x:Static properties:Resources.BindPhysicalCameraCode}"  Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.CameraCode ,Mode=OneWay }"/>
                             </DockPanel>
                         </StackPanel>
 
                     </TabItem>
-                    <TabItem Header="数据目录服务配置">
+                    <TabItem Header="{x:Static properties:Resources.DataDirectoryServiceConfig}">
                         <StackPanel Margin="5">
                             <DockPanel Margin="0,2">
-                                <TextBlock Text="数据目录:" Width="120"/>
+                                <TextBlock Text="{x:Static properties:Resources.DataDirectory}" Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.FileServerCfg.DataBasePath}" />
                             </DockPanel>
                             <DockPanel Margin="0,5">
-                                <TextBlock  Text="端口地址:" Width="120"/>
+                                <TextBlock  Text="{x:Static properties:Resources.PortAddress}" Width="120"/>
                                 <TextBox  IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.FileServerCfg.Endpoint}"/>
                             </DockPanel>
                             <DockPanel Margin="0,5">
-                                <TextBlock  Text="端口范围:" Width="120"/>
+                                <TextBlock  Text="{x:Static properties:Resources.PortRange}" Width="120"/>
                                 <TextBox  IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.FileServerCfg.PortRange}"/>
                             </DockPanel>
                             <DockPanel Margin="0,5">
-                                <TextBlock  Text="保存天数:" Width="120"/>
+                                <TextBlock  Text="{x:Static properties:Resources.RetentionDays}" Width="120"/>
                                 <TextBox  IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.FileServerCfg.SaveDays}"/>
                             </DockPanel>
                             <DockPanel>
                                 <Button DockPanel.Dock="Right" Content="清理" Click="ServiceCache_Click"/>
-                                <TextBlock Text="服务缓存"/>
+                                <TextBlock Text="{x:Static properties:Resources.ServiceCach}"/>
                             </DockPanel>
                         </StackPanel>
 
