--- a/Engine/ColorVision.Engine/Services/Devices/CfwPort/InfoCfwPort.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/CfwPort/InfoCfwPort.xaml
@@ -79,7 +79,7 @@
                             </UniformGrid>
                         </ScrollViewer>
                     </TabItem>
-                    <TabItem Header="基本信息">
+                    <TabItem Header="{x:Static properties:Resources.BasicInformation}">
                         <StackPanel Margin="5">
                             <Grid>
                                 <StackPanel Margin="5" >
@@ -88,15 +88,15 @@
                                         <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.Code}"/>
                                     </DockPanel>
                                     <DockPanel>
-                                        <TextBlock Text="发送信道:" Width="120"/>
+                                        <TextBlock Text="{x:Static properties:Resources.TransmitChannel}" Width="120"/>
                                         <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.SendTopic}"/>
                                     </DockPanel>
                                     <DockPanel>
-                                        <TextBlock Text="接收信道:" Width="120"/>
+                                        <TextBlock Text="{x:Static properties:Resources.ReceiveChannel}" Width="120"/>
                                         <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.SubscribeTopic}"/>
                                     </DockPanel>
                                     <DockPanel>
-                                        <TextBlock Text="心跳时间"  Width="120"/>
+                                        <TextBlock Text="{x:Static properties:Resources.HeartbeatTime}"  Width="120"/>
                                         <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.HeartbeatTime}"/>
                                     </DockPanel>
                                     <DockPanel Margin="0,2" >
@@ -104,7 +104,7 @@
                                         <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.ServiceToken}"/>
                                     </DockPanel>
                                     <DockPanel>
-                                        <TextBlock Text="设备自连接"  Width="120"/>
+                                        <TextBlock Text="{x:Static properties:Resources.DeviceAutoConnect}"  Width="120"/>
                                         <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.IsAutoOpen}"/>
                                     </DockPanel>
      
