--- a/Engine/ColorVision.Engine/Services/Devices/FileServer/InfoFileServer.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/FileServer/InfoFileServer.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ColorVision.Engine.Services.Devices.FileServer"
-             xmlns:resx="clr-namespace:ColorVision.Engine.Properties"
+             xmlns:properties="clr-namespace:ColorVision.Engine.Properties"
              mc:Ignorable="d" 
              d:DataContext="{d:DesignInstance local:DeviceFileServer}"
              d:DesignHeight="450" d:DesignWidth="800" Initialized="UserControl_Initialized">
@@ -71,26 +71,26 @@
 
             <Border  Grid.Row="1"  Background="{DynamicResource RegionBrush}" CornerRadius="5" Margin="0,5,0,0">
                 <StackPanel Margin="5,0">
-                    <GroupBox Header="基本信息" Margin="0,5">
+                    <GroupBox Header="{x:Static properties:Resources.BasicInformation}" Margin="0,5">
                         <StackPanel Margin="5">
                             <DockPanel Margin="0,2">
-                                <TextBlock Text="设备Code:" Width="120"/>
+                                <TextBlock Text="{x:Static properties:Resources.DeviceCode}" Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.Code}"/>
                             </DockPanel>
                             <DockPanel Margin="0,2">
-                                <TextBlock Text="文件目录" Width="120"/>
+                                <TextBlock Text="{x:Static properties:Resources.FileDirectory}" Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.FileBasePath}"/>
                             </DockPanel>
                             <DockPanel Margin="0,2">
-                                <TextBlock Text="端口地址" Width="120"/>
+                                <TextBlock Text="{x:Static properties:Resources.PortAddress}" Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.Endpoint}"/>
                             </DockPanel>
                             <DockPanel Margin="0,2">
-                                <TextBlock Text="端口范围" Width="120"/>
+                                <TextBlock Text="{x:Static properties:Resources.PortRange}" Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.PortRange}"/>
                             </DockPanel>
                             <DockPanel Margin="0,2">
-                                <TextBlock Text="服务缓存"/>
+                                <TextBlock Text="{x:Static properties:Resources.ServiceCach}"/>
                             </DockPanel>
                             <DockPanel Margin="0,2">
                                 <TextBlock Text="SN" Width="120"/>
