--- a/Engine/ColorVision.Engine/Services/Devices/SMU/InfoSMU.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/SMU/InfoSMU.xaml
@@ -87,30 +87,30 @@
                             <UniformGrid x:Name="CommandGrid" Margin="5" Columns="3" VerticalAlignment="Top"/>
                         </ScrollViewer>
                     </TabItem>
-                    <TabItem Header="基本信息">
+                    <TabItem Header="{x:Static properties:Resources.BasicInformation}">
                         <StackPanel Margin="5">
                             <DockPanel>
-                                <TextBlock Text="设备类型:" Width="120"/>
+                                <TextBlock Text="{x:Static properties:Resources.DeviceType}" Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.DevType}"/>
                             </DockPanel>
                             <DockPanel>
-                                <TextBlock Text="设备Code:" Width="120"/>
+                                <TextBlock Text="{x:Static properties:Resources.DeviceCode}" Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.Code}"/>
                             </DockPanel>
                             <DockPanel>
-                                <TextBlock Text="源表地址" Width="120"/>
+                                <TextBlock Text="{x:Static properties:Resources.SMUAddr}" Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.Id}"/>
                             </DockPanel>
                             <DockPanel>
-                                <TextBlock Text="发送信道" Width="120"/>
+                                <TextBlock Text="{x:Static properties:Resources.TransmitChannel}" Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.SendTopic}"/>
                             </DockPanel>
                             <DockPanel>
-                                <TextBlock Text="接收信道" Width="120"/>
+                                <TextBlock Text="{x:Static properties:Resources.ReceiveChannel}" Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.SubscribeTopic}"/>
                             </DockPanel>
                             <DockPanel>
-                                <TextBlock Text="心跳时间(ms)"  Width="120"/>
+                                <TextBlock Text="{x:Static properties:Resources.HeartbeatTime}"  Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.HeartbeatTime}"/>
                             </DockPanel>
                             <DockPanel>
@@ -118,7 +118,7 @@
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.ServiceToken}"/>
                             </DockPanel>
                             <DockPanel>
-                                <TextBlock Text="设备自连接"  Width="120"/>
+                                <TextBlock Text="{x:Static properties:Resources.DeviceAutoConnect}"  Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.IsAutoStart}"/>
                             </DockPanel>
                         </StackPanel>
