--- a/Engine/ColorVision.Engine/Services/Devices/Sensor/InfoSensor.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Sensor/InfoSensor.xaml
@@ -88,26 +88,26 @@
                             </UniformGrid>
                         </ScrollViewer>
                     </TabItem>
-                    <TabItem Header="基本信息">
+                    <TabItem Header="{x:Static properties:Resources.BasicInformation}">
                         <StackPanel Margin="5">
                             <DockPanel>
                                 <TextBlock Text="ID" Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.Id}"/>
                             </DockPanel>
                             <DockPanel Margin="0,2" >
-                                <TextBlock Text="设备自动连接"  Width="120"/>
+                                <TextBlock Text="{x:Static properties:Resources.DeviceAutoConnect}"  Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.IsAutoOpen}"/>
                             </DockPanel>
                             <DockPanel>
-                                <TextBlock Text="发送信道" Width="120"/>
+                                <TextBlock Text="{x:Static properties:Resources.TransmitChannel}" Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.SendTopic}"/>
                             </DockPanel>
                             <DockPanel>
-                                <TextBlock Text="接收信道" Width="120"/>
+                                <TextBlock Text="{x:Static properties:Resources.ReceiveChannel}" Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.SubscribeTopic}"/>
                             </DockPanel>
                             <DockPanel>
-                                <TextBlock Text="心跳时间(ms)"  Width="120"/>
+                                <TextBlock Text="{x:Static properties:Resources.HeartbeatTime}"  Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.HeartbeatTime}"/>
                             </DockPanel>
                             <DockPanel>
@@ -116,20 +116,20 @@
                             </DockPanel>
                         </StackPanel>
                     </TabItem>
-                    <TabItem Header="传感器配置信息">
+                    <TabItem Header="{x:Static properties:Resources.SensorCfgInfo}">
                         <StackPanel Margin="5">
                             <DockPanel>
-                                <TextBlock Text="类别型号" Width="120"/>
+                                <TextBlock Text="{x:Static properties:Resources.CategoryModel}" Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.Category}"/>
                             </DockPanel>
                             <DockPanel>
-                                <TextBlock  Text="IP地址" Width="120" Visibility="{Binding Config.IsNet,Converter={StaticResource bool2VisibilityConverter}}"/>
-                                <TextBlock  Text="串口" Width="120" Visibility="{Binding Config.IsNet,Converter={StaticResource bool2VisibilityConverter1}}"/>
+                                <TextBlock  Text="{x:Static properties:Resources.IPAddress}" Width="120" Visibility="{Binding Config.IsNet,Converter={StaticResource bool2VisibilityConverter}}"/>
+                                <TextBlock  Text="{x:Static properties:Resources.Serial}" Width="120" Visibility="{Binding Config.IsNet,Converter={StaticResource bool2VisibilityConverter1}}"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.Addr}"/>
                             </DockPanel>
                             <DockPanel>
-                                <TextBlock  Text="端口" Width="120"  Visibility="{Binding Config.IsNet,Converter={StaticResource bool2VisibilityConverter}}"/>
-                                <TextBlock  Text="波特率" Width="120"  Visibility="{Binding Config.IsNet,Converter={StaticResource bool2VisibilityConverter1}}"/>
+                                <TextBlock  Text="{x:Static properties:Resources.Port}" Width="120"  Visibility="{Binding Config.IsNet,Converter={StaticResource bool2VisibilityConverter}}"/>
+                                <TextBlock  Text="{x:Static properties:Resources.BaudRate}" Width="120"  Visibility="{Binding Config.IsNet,Converter={StaticResource bool2VisibilityConverter1}}"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.Port}"/>
                             </DockPanel>
                         </StackPanel>
