更新本地化资源和替换硬编码文本
在 Resources.Designer.cs 中更新 GeneratedCodeAttribute 版本号。
删除了 CategoryModel 和 CaptureImage 的资源字符串。
添加了多个新的资源字符串，如 AdaptiveZeroCalibration 等。
在多个 .resx 文件中添加了新的本地化字符串资源。
在多个 XAML 文件中，将硬编码的中文文本替换为资源文件中的本地化字符串。
这些更改提高了应用程序的可维护性和多语言支持。

--- a/Engine/ColorVision.Engine/Services/Devices/Spectrum/SpectrumResourceControl.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Spectrum/SpectrumResourceControl.xaml
@@ -6,6 +6,7 @@
              xmlns:local="clr-namespace:ColorVision.Engine.Services.Devices.Spectrum"
              mc:Ignorable="d" 
              xmlns:hc="https://handyorg.github.io/handycontrol"
+             xmlns:properties="clr-namespace:ColorVision.Engine.Properties" 
              d:DataContext="{d:DesignInstance Type=local:SpectrumResourceParam}"
              d:DesignHeight="450" d:DesignWidth="800" Initialized="UserControl_Initialized">
     <UserControl.Resources>
@@ -17,11 +18,11 @@
     </UserControl.Resources>
     <StackPanel Margin="5">
         <DockPanel  Margin="0,0,0,5">
-            <TextBlock DockPanel.Dock="Left" Text="校正文件"  Width="80" />
+            <TextBlock DockPanel.Dock="Left" Text="{x:Static properties:Resources.CalibrationFile}"  Width="80" />
             <hc:ComboBox x:Name="ComboBoxList" Text="{Binding ResourceMode}" DisplayMemberPath="Name" SelectionChanged="ComboBox_SelectionChanged" />
         </DockPanel>
         <DockPanel  Margin="0,0,0,5">
-            <TextBlock DockPanel.Dock="Left" Text="名称" Width="80" />
+            <TextBlock DockPanel.Dock="Left" Text="{x:Static properties:Resources.Name}" Width="80" />
             <CheckBox  VerticalAlignment="Center" DockPanel.Dock="Right" Content="" IsChecked="{Binding IsSelected}"   Margin="5,0"/>
             <TextBox Text="{Binding  ResourceName}"/>
         </DockPanel>
