--- a/Engine/ColorVision.Engine/Services/Devices/Spectrum/InfoSpectrum.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Spectrum/InfoSpectrum.xaml
@@ -103,15 +103,15 @@
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.SN}"/>
                             </DockPanel>
                             <DockPanel>
-                                <TextBlock Text="发送信道:" Width="120"/>
+                                <TextBlock Text="{x:Static properties:Resources.TransmitChannel}" Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.SendTopic}"/>
                             </DockPanel>
                             <DockPanel>
-                                <TextBlock Text="接收信道:" Width="120"/>
+                                <TextBlock Text="{x:Static properties:Resources.ReceiveChannel}" Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.SubscribeTopic}"/>
                             </DockPanel>
                             <DockPanel>
-                                <TextBlock Text="心跳时间"  Width="120"/>
+                                <TextBlock Text="{x:Static properties:Resources.HeartbeatTime}"  Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.HeartbeatTime}"/>
                             </DockPanel>
                             <DockPanel Margin="0,2" >
@@ -119,24 +119,24 @@
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.ServiceToken}"/>
                             </DockPanel>
                             <DockPanel>
-                                <TextBlock Text="设备自连接"  Width="120"/>
+                                <TextBlock Text="{x:Static properties:Resources.DeviceAutoConnect}"  Width="120"/>
                                 <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.IsAutoOpen}"/>
                             </DockPanel>
                         </StackPanel>
                     </TabItem>
-                    <TabItem Header="光谱仪信息">
+                    <TabItem Header="{x:Static properties:Resources.SpectrumInfo}">
                         <StackPanel Margin="10">
                             <StackPanel Margin="5">
                                 <DockPanel>
-                                    <TextBlock Text="自动测试间隔(ms)" Width="120"/>
+                                    <TextBlock Text="{x:Static properties:Resources.AutoTestInterval_Ms}" Width="120"/>
                                     <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.AutoTestTime}"/>
                                 </DockPanel>
                                 <DockPanel>
-                                    <TextBlock Text="最大积分时间(ms)" Width="120"/>
+                                    <TextBlock Text="{x:Static properties:Resources.MaxIntegrationTime_Ms}" Width="120"/>
                                     <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.MaxIntegralTime}"/>
                                 </DockPanel>
                                 <DockPanel>
-                                    <TextBlock Text="起始积分时间(ms)" Width="120"/>
+                                    <TextBlock Text="{x:Static properties:Resources.StartIntegrationTime_Ms}" Width="120"/>
                                     <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.BeginIntegralTime}"/>
                                 </DockPanel>
                             </StackPanel>
@@ -144,28 +144,28 @@
                             <GroupBox Header="Shutter" Margin="0,5">
                                 <StackPanel Margin="5">
                                     <DockPanel Margin="0,2">
-                                        <TextBlock Text="启用" Width="120"/>
+                                        <TextBlock Text="{x:Static properties:Resources.IsEnable}" Width="120"/>
                                         <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.IsShutterEnable}"/>
                                     </DockPanel>
                                     <StackPanel Visibility="{Binding Config.IsShutterEnable,Converter={StaticResource bool2VisibilityConverter}}">
                                         <DockPanel Margin="0,2">
-                                            <TextBlock Text="串口:" Width="120"/>
+                                            <TextBlock Text="{x:Static properties:Resources.Serial}" Width="120"/>
                                             <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.ShutterCfg.Addr}"/>
                                         </DockPanel>
                                         <DockPanel Margin="0,2">
-                                            <TextBlock Text="波特率:" Width="120"/>
+                                            <TextBlock Text="{x:Static properties:Resources.BaudRate}" Width="120"/>
                                             <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.ShutterCfg.BaudRate}"/>
                                         </DockPanel>
                                         <DockPanel>
-                                            <TextBlock Text="延时(ms):" Width="120"/>
+                                            <TextBlock Text="{x:Static properties:Resources.DelayMs}" Width="120"/>
                                             <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.ShutterCfg.DelayTime}"/>
                                         </DockPanel>
                                         <DockPanel>
-                                            <TextBlock Text="打开命令:" Width="120"/>
+                                            <TextBlock Text="{x:Static properties:Resources.OpenCmd}" Width="120"/>
                                             <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.ShutterCfg.OpenCmd}"/>
                                         </DockPanel>
                                         <DockPanel>
-                                            <TextBlock Text="关闭命令" Width="120"/>
+                                            <TextBlock Text="{x:Static properties:Resources.CloseCmd}" Width="120"/>
                                             <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.ShutterCfg.CloseCmd}"/>
                                         </DockPanel>
                                     </StackPanel>
@@ -173,22 +173,22 @@
                             </GroupBox>
                         </StackPanel>
                     </TabItem>
-                    <TabItem Header="文件配置">
-                        <StackPanel Margin="10">
-                            <DockPanel Margin="0,2">
-                                <TextBlock Text="数据目录" Width="120"/>
-                                <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.FileServerCfg.DataBasePath}"/>
-                            </DockPanel>
-                            <DockPanel Margin="0,2">
-                                <TextBlock Text="端口地址" Width="120"/>
-                                <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.FileServerCfg.Endpoint}"/>
-                            </DockPanel>
-                            <DockPanel Margin="0,2">
-                                <TextBlock Text="端口范围" Width="120"/>
-                                <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.FileServerCfg.PortRange}"/>
-                            </DockPanel>
-                        </StackPanel>
-                    </TabItem>
+                    <TabItem Header="{x:Static properties:Resources.Filecfg}"/>
+                    <StackPanel Margin="10">
+                        <DockPanel Margin="0,2">
+                            <TextBlock Text="{x:Static properties:Resources.DataDirectory}" Width="120"/>
+                            <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.FileServerCfg.DataBasePath}"/>
+                        </DockPanel>
+                        <DockPanel Margin="0,2">
+                            <TextBlock Text="{x:Static properties:Resources.PortAddress}" Width="120"/>
+                            <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.FileServerCfg.Endpoint}"/>
+                        </DockPanel>
+                        <DockPanel Margin="0,2">
+                            <TextBlock Text="{x:Static properties:Resources.PortRange}" Width="120"/>
+                            <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.FileServerCfg.PortRange}"/>
+                        </DockPanel>
+                    </StackPanel>
+
                 </TabControl>
 
             </Border>
