--- a/Engine/ColorVision.Engine/Services/Terminal/TerminalServiceControl.xaml
+++ b/Engine/ColorVision.Engine/Services/Terminal/TerminalServiceControl.xaml
@@ -82,19 +82,19 @@
                         <GroupBox Header="{x:Static properties:Resources.BasicInformation}" Margin="5">
                             <StackPanel Margin="5">
                                 <DockPanel >
-                                    <TextBlock Text="服务代码:" Width="120"/>
+                                    <TextBlock Text="{x:Static properties:Resources.ServiceCode}" Width="120"/>
                                     <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding SysResourceModel.Code}"/>
                                 </DockPanel>
                                 <DockPanel >
-                                    <TextBlock Text="发送信道:" Width="120"/>
+                                    <TextBlock Text="{x:Static properties:Resources.TransmitChannel}" Width="120"/>
                                     <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.SendTopic}"/>
                                 </DockPanel>
                                 <DockPanel >
-                                    <TextBlock Text="接收信道:" Width="120"/>
+                                    <TextBlock Text="{x:Static properties:Resources.ReceiveChannel}" Width="120"/>
                                     <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.SubscribeTopic}"/>
                                 </DockPanel>
                                 <DockPanel >
-                                    <TextBlock Text="心跳:" Width="120"/>
+                                    <TextBlock Text="{x:Static properties:Resources.HeartbeatTime}" Width="120"/>
                                     <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.HeartbeatTime}"/>
                                 </DockPanel>
                             </StackPanel>
