--- a/Engine/ColorVision.Engine/Templates/FocusPoints/DisplayFocusPoints.xaml
+++ b/Engine/ColorVision.Engine/Templates/FocusPoints/DisplayFocusPoints.xaml
@@ -22,7 +22,7 @@
             <TabControl BorderThickness="0" Background="Transparent">
                 <TabItem Background="Transparent" Header="{x:Static properties:Resources.Local}" IsSelected="{Binding IsLocalFile}" >
                     <StackPanel Orientation="Horizontal" Margin="0,2">
-                        <TextBlock Text="文件" Margin="10,0,0,0" Width="40"/>
+                        <TextBlock Text="{x:Static properties:Resources.File}" Margin="10,0,0,0" Width="40"/>
                         <TextBox x:Name="ImageFile" Style="{StaticResource TextBox.Small}"  Width="150" Text="{Binding ImageFilePath}" Margin="0,0,2,0" HorizontalAlignment="Left" />
                         <Button  Content="..." DockPanel.Dock="Right" HorizontalAlignment="Right"  Click="Open_File" />
                         <Button DockPanel.Dock="Right" Content="{x:Static properties:Resources.Open}" Click="Button_OpenLocal_Click" />
@@ -57,7 +57,7 @@
                     </StackPanel>
 
                 </TabItem>
-                <TabItem  Background="Transparent" Header="批次号" x:Name="AlgBatchSelect" >
+                <TabItem  Background="Transparent" Header="{x:Static properties:Resources.BatchNumber}" x:Name="AlgBatchSelect" >
                     <StackPanel>
                         <DockPanel Margin="0,2">
                             <TextBlock Text="批次号" Margin="10,0,0,0" Width="40"/>
